[gd_scene load_steps=15 format=3 uid="uid://iisuretcuh7m"]

[ext_resource type="Script" path="res://scripts/hhx.gd" id="1_dikrv"]
[ext_resource type="Texture2D" uid="uid://bhi60ilot0dfn" path="res://assets/HHX.png" id="1_n8u5i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s0gcq"]
atlas = ExtResource("1_n8u5i")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5urt"]
atlas = ExtResource("1_n8u5i")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehut5"]
atlas = ExtResource("1_n8u5i")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2886"]
atlas = ExtResource("1_n8u5i")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3mik"]
atlas = ExtResource("1_n8u5i")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvw6g"]
atlas = ExtResource("1_n8u5i")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x212w"]
atlas = ExtResource("1_n8u5i")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_im0fv"]
atlas = ExtResource("1_n8u5i")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouj0t"]
atlas = ExtResource("1_n8u5i")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7auxj"]
atlas = ExtResource("1_n8u5i")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_txwo0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0gcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5urt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehut5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2886")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3mik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvw6g")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x212w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im0fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouj0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7auxj")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_uc2nh"]
radius = 5.0

[node name="HHX" type="CharacterBody2D"]
collision_mask = 3
script = ExtResource("1_dikrv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_txwo0")
animation = &"attack"
autoplay = "idle"
frame_progress = 0.0497805

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3)
shape = SubResource("CircleShape2D_uc2nh")

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-6, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(7, 0)

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
